--- a/po/sr_RS.po
+++ b/po/sr_RS.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix-8.3.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2024-06-08 14:31+0200\n"
+"POT-Creation-Date: 2024-06-08 16:43+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>, 2019-2021\n"
 "Language-Team: Serbian (Serbia) (http://www.transifex.com/moritz-bunkus/"
@@ -5652,7 +5652,7 @@ msgstr "&Dodatni parametri komandne linije:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
 #, fuzzy, no-c-format
-msgid "Default command-&line esacpe mode:"
+msgid "Default command-&line escape mode:"
 msgstr "&Dodatni parametri komandne linije:"
 
 #: src/common/kax_element_names.cpp:209
