--- a/po/eu.po
+++ b/po/eu.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoonix-eu\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2024-06-08 14:31+0200\n"
+"POT-Creation-Date: 2024-06-08 16:43+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Xabier Aramendi <azpidatziak@gmail.com>, 2016-2018,2020\n"
 "Language-Team: Basque (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
@@ -5631,7 +5631,7 @@ msgstr "Berezko agindu lerro aukera gehigarriak:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
 #, fuzzy, no-c-format
-msgid "Default command-&line esacpe mode:"
+msgid "Default command-&line escape mode:"
 msgstr "Berezko agindu lerr&o aukera gehigarriak:"
 
 #: src/common/kax_element_names.cpp:209
