--- a/po/pt.po
+++ b/po/pt.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pt\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2024-06-08 14:31+0200\n"
+"POT-Creation-Date: 2024-06-08 16:43+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Ricardo Perdigão <ricardofonseca1977@gmail.com>, 2016,2018\n"
 "Language-Team: Portuguese (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/pt/)\n"
@@ -5664,7 +5664,7 @@ msgstr "Opções adicionais predefinidas da linha de comandos:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
 #, fuzzy, no-c-format
-msgid "Default command-&line esacpe mode:"
+msgid "Default command-&line escape mode:"
 msgstr "Opções adicionais predefinidas da linha de comandos:"
 
 #: src/common/kax_element_names.cpp:209
