--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pt-BR\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2024-06-08 14:31+0200\n"
+"POT-Creation-Date: 2024-06-08 16:43+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2024\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
@@ -5685,7 +5685,7 @@ msgstr "Opções de linha de co&mando adicionais padrão:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
 #, fuzzy, no-c-format
-msgid "Default command-&line esacpe mode:"
+msgid "Default command-&line escape mode:"
 msgstr "Opções de linha de co&mando adicionais padrão:"
 
 #: src/common/kax_element_names.cpp:209
