--- a/po/tr.po
+++ b/po/tr.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.8.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2024-06-08 14:31+0200\n"
+"POT-Creation-Date: 2024-06-08 16:43+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: BouRock, 2016-2024\n"
 "Language-Team: Turkish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
@@ -5633,7 +5633,7 @@ msgstr "Varsayılan &ilave komut satırı seçenekleri:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
 #, fuzzy, no-c-format
-msgid "Default command-&line esacpe mode:"
+msgid "Default command-&line escape mode:"
 msgstr "Varsayılan &ilave komut satırı seçenekleri:"
 
 #: src/common/kax_element_names.cpp:209
