--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-06-02 16:06+0200\n"
+"POT-Creation-Date: 2024-06-13 11:59+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2024\n"
 "Language-Team: French (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
@@ -3508,7 +3508,9 @@ msgstr "Le format <literal>json</literal> génère une représentation JSON lisi
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2170
-msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v18.json\"><literal>mkvmerge-identification-output-schema-v18.json</literal></ulink>"
+#, fuzzy
+#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v18.json\"><literal>mkvmerge-identification-output-schema-v18.json</literal></ulink>"
+msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v20.json\"><literal>mkvmerge-identification-output-schema-v20.json</literal></ulink>"
 msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v18.json\"><literal>mkvmerge-identification-output-schema-v18.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
