--- a/doc/man/po4a/po/pl.po
+++ b/doc/man/po4a/po/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.5.0\n"
-"POT-Creation-Date: 2024-06-02 16:06+0200\n"
+"POT-Creation-Date: 2024-06-13 11:59+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Grzegorz Pruchniakowski <gootector@o2.pl>, 2022-2023\n"
 "Language-Team: Polish (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pl/)\n"
@@ -3544,7 +3544,9 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2170
-msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v18.json\"><literal>mkvmerge-identification-output-schema-v18.json</literal></ulink>"
+#, fuzzy
+#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v18.json\"><literal>mkvmerge-identification-output-schema-v18.json</literal></ulink>"
+msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v20.json\"><literal>mkvmerge-identification-output-schema-v20.json</literal></ulink>"
 msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v18.json\"><literal>mkvmerge-identification-output-schema-v18.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
