program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -2704,12 +2704,12 @@ msgstr "« {0} » n'est pas un code ISO 639-2 ou ISO 639-1 valide. Voir « mkvme
 #: src/common/chapters/chapters.cpp:313
 #, no-c-format, c++-format
 msgid "'{0}' is not a CHAPTERxx=... line."
-msgstr "« {0} » n'est pas une ligne CHAPTERxx=…."
+msgstr "« {0} » n'est pas une ligne CHAPTERxx=…."
 
 #: src/common/chapters/chapters.cpp:317
 #, no-c-format, c++-format
 msgid "'{0}' is not a CHAPTERxxNAME=... line."
-msgstr "« {0} » n'est pas une ligne CHAPTERxxNAME=…."
+msgstr "« {0} » n'est pas une ligne CHAPTERxxNAME=…."
 
 #: src/common/chapters/dvd.cpp:133
 #, no-c-format, c++-format
@@ -5210,7 +5210,7 @@ msgstr "Impossible de conserver l'UID de piste {0} car il est déjà alloué à 
 #: src/input/r_vobsub.cpp:115
 #, no-c-format, c++-format
 msgid "Could not open '{0}' for reading.\n"
-msgstr "Impossible d'ouvrir « {0} » en lecture.\n"
+msgstr "Impossible d'ouvrir « {0} » en lecture.\n"
 
 #: src/input/r_wavpack.cpp:66
 #, no-c-format, c++-format
@@ -5235,7 +5235,7 @@ msgstr "Impossible d'ouvrir ou de lire le fichier « {0} »."
 #: src/common/chapters/chapters.cpp:558
 #, no-c-format, c++-format
 msgid "Could not parse the chapters in '{0}': {1}\n"
-msgstr "Impossible d'analyser les chapitres dans « {0} » : {1}\n"
+msgstr "Impossible d'analyser les chapitres dans « {0} » : {1}\n"
 
 #: src/input/r_ogm_flac.cpp:255
 #, no-c-format
@@ -5658,9 +5658,9 @@ msgid "Default additional co&mmand line options:"
 msgstr "Autres options par défaut pour la ligne de co&mmande :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Default command-&line escape mode:"
-msgstr "Autres options par défaut pour la ligne de co&mmande :"
+msgstr "Mode d'échappement par défaut en ligne de commande :"
 
 #: src/common/kax_element_names.cpp:209
 #: src/common/property_element.cpp:143
@@ -7934,7 +7934,7 @@ msgstr "Informations et avertissements :"
 #: src/common/bitvalue.cpp:76
 #, no-c-format, c++-format
 msgid "Input too long: {0} > {1}"
-msgstr "Entrée trop longue : {0} > {1}"
+msgstr "Entrée trop longue : {0} > {1}"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:966
 #, no-c-format
@@ -7989,7 +7989,7 @@ msgstr "Attribut « format » invalide « {0} »."
 #: src/common/base64.h:28
 #, no-c-format
 msgid "Invalid Base64 character encountered"
-msgstr "Caractère Base64 valide rencontré"
+msgstr "Caractère Base64 invalide rencontré"
 
 #: src/extract/extract_cli_parser.cpp:183
 #, no-c-format, c++-format
@@ -8167,7 +8167,7 @@ msgstr "Longueur du contenu hexadécimal invalide : doit être divisible par 2."
 #: src/common/chapters/chapters.cpp:302
 #, no-c-format, c++-format
 msgid "Invalid minute: {0}"
-msgstr "Minutes invalides : {0}"
+msgstr "Minute invalide : {0}"
 
 #: src/common/strings/parsing.cpp:220
 #, no-c-format, c++-format
@@ -8182,7 +8182,7 @@ msgstr "Nombre de secondes invalide : {0} > 59."
 #: src/common/chapters/chapters.cpp:304
 #, no-c-format, c++-format
 msgid "Invalid second: {0}"
-msgstr "Secondes invalides : {0}"
+msgstr "Seconde invalide : {0}"
 
 #: src/propedit/propedit_cli_parser.cpp:49
 #: src/propedit/propedit_cli_parser.cpp:70
@@ -9094,9 +9094,9 @@ msgid "Multiple modes can be used in the same invocation of mkvextract allowing 
 msgstr "Plusieurs modes peuvent être utilisés en invoquant mkvextract, ce qui permet d'extraire plusieurs choses en une seule passe."
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:130
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Multiplex &settings:"
-msgstr "Paramètres de multiplexage &suivants"
+msgstr "Paramètres de multiple&xage :"
 
 #: src/mkvtoolnix-gui/jobs/mux_job.cpp:184
 #, no-c-format
@@ -9536,7 +9536,7 @@ msgstr "Habituellement le code HEVC/H.265 de mkvmerge et mkvextract normalise le
 #: src/common/bitvalue.cpp:72
 #, no-c-format, c++-format
 msgid "Not a hex digit at position {0}"
-msgstr "Pas de chiffre hexadécimal à la {0}."
+msgstr "Pas de chiffre hexadécimal à la position {0}."
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:183
 #, no-c-format
@@ -11448,7 +11448,7 @@ msgstr "Définit une propriété sur la valeur si elle existe, sinon l'ajouter"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:412
 #, no-c-format
 msgid "Sets how to escape arguments by default in the 'Show command line' dialog."
-msgstr ""
+msgstr "Définit comment échapper par défaut les arguments de la boîte de dialogue « Afficher la ligne de commande »."
 
 #: src/propedit/propedit_cli_parser.cpp:248
 #, no-c-format
@@ -11689,7 +11689,7 @@ msgstr "Bloc simple"
 #: src/common/chapters/chapters.cpp:170
 #, no-c-format, c++-format
 msgid "Simple chapter parser: {0}\n"
-msgstr "Analyse de chapitres simple : {0}\n"
+msgstr "Analyse de chapitres simple : {0}\n"
 
 #: src/mpegparser/M2VParser.cpp:416
 #, no-c-format
