program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-06-08 16:43+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Vincenzo Reale <vinx.reale@gmail.com>, 2018\n"
+"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2024\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
 "Language: it\n"
@@ -5671,9 +5671,9 @@ msgid "Default additional co&mmand line options:"
 msgstr "Opzioni aggiuntive predefinite linea di co&mando:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Default command-&line escape mode:"
-msgstr "Opzioni aggiuntive predefinite linea di co&mando:"
+msgstr "Moda&lità escape predefinita riga di comando:"
 
 #: src/common/kax_element_names.cpp:209
 #: src/common/property_element.cpp:143
@@ -9112,9 +9112,9 @@ msgid "Multiple modes can be used in the same invocation of mkvextract allowing 
 msgstr "I modi multipli possono essere nella stessa esecuzione di mkvextract permettendo l'estrazione di più cose in un singolo passaggio."
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:130
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Multiplex &settings:"
-msgstr "Impostazioni multiplexi&ng successive"
+msgstr "Impo&stazioni multiplex:"
 
 #: src/mkvtoolnix-gui/jobs/mux_job.cpp:184
 #, no-c-format
@@ -11469,7 +11469,7 @@ msgstr "Imposta una proprietà al valore se esiste e la aggiunge altrimenti"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:412
 #, no-c-format
 msgid "Sets how to escape arguments by default in the 'Show command line' dialog."
-msgstr ""
+msgstr "Imposta come eseguire l'escape degli argomenti per impostazione predefinita nella finestra di dialogo \"Visualizza riga di comando\"."
 
 #: src/propedit/propedit_cli_parser.cpp:248
 #, no-c-format
