program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -801,7 +801,7 @@ msgid ""
 "                           by modifying audio frame headers.\n"
 msgstr ""
 "  --remove-dialog-normalization-gain <TID>\n"
-"                           Ses karesi üstbilgilerini değiştirerek iletişim normalleştirme\n"
+"                           Ses karesi üstbilgilerini değiştirerek konuşma normalleştirme\n"
 "                           kazancını kaldırır veya en aza indirir.\n"
 
 #: src/merge/mkvmerge.cpp:119
@@ -4396,7 +4396,7 @@ msgstr "Tüm izler için istatistikleri hesapla ve onlar için yeni etiketler ek
 #: src/common/property_element.cpp:138
 #, no-c-format
 msgid "Can be set for tracks containing onscreen text or foreign-language dialog."
-msgstr "Ekrandaki metin veya yabancı dilde diyalog içeren izler için ayarlanabilir."
+msgstr "Ekrandaki metin veya yabancı dilde konuşma içeren izler için ayarlanabilir."
 
 #: src/common/property_element.cpp:135
 #: src/mkvtoolnix-gui/merge/input.cpp:571
@@ -5632,9 +5632,9 @@ msgid "Default additional co&mmand line options:"
 msgstr "Varsayılan &ilave komut satırı seçenekleri:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Default command-&line escape mode:"
-msgstr "Varsayılan &ilave komut satırı seçenekleri:"
+msgstr "Varsayılan komut &satır atlatma kipi:"
 
 #: src/common/kax_element_names.cpp:209
 #: src/common/property_element.cpp:143
@@ -6287,7 +6287,7 @@ msgstr "Yayın/Bölüm"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1580
 #, no-c-format
 msgid "Either fix the error or remove the configuration before closing the preferences dialog."
-msgstr "Tercihler iletisini kapatmadan önce ya hatayı düzeltin ya da yapılandırmayı kaldırın."
+msgstr "Tercihler ileti penceresini kapatmadan önce ya hatayı düzeltin ya da yapılandırmayı kaldırın."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:959
 #, no-c-format
@@ -9066,9 +9066,9 @@ msgid "Multiple modes can be used in the same invocation of mkvextract allowing 
 msgstr "Birden çok kip, tek bir geçişteki birden çok şeyin çıkarılmasına izin veren mkvextract'ın aynı çağırma şeklinde kullanılabilir."
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:130
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Multiplex &settings:"
-msgstr "&Sonraki çoklama ayarları"
+msgstr "Çoklama &ayarları:"
 
 #: src/mkvtoolnix-gui/jobs/mux_job.cpp:184
 #, no-c-format
@@ -10763,7 +10763,7 @@ msgstr "Bir iş hatalarla sona erdiğinde veya iptal edildiğinde çıktı &dosy
 #: src/mkvtoolnix-gui/merge/input.cpp:639
 #, no-c-format
 msgid "Removes or at least minimizes the dialog normalization gain by modifying audio headers."
-msgstr "Ses üstbilgilerini değiştirerek konuşma normalleştirmesi kazancını kaldırır ya da en aza indirir."
+msgstr "Ses üstbilgilerini değiştirerek konuşma normalleştirme kazancını kaldırır ya da en aza indirir."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:357
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:375
@@ -11410,7 +11410,7 @@ msgstr "Eğer mevcutsa değere özelliği ayarlar ve aksi halde ekler"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:412
 #, no-c-format
 msgid "Sets how to escape arguments by default in the 'Show command line' dialog."
-msgstr ""
+msgstr "'Komut satırını göster' ileti penceresinde varsayılan olarak bağımsız değişkenlerin nasıl atlatılacağını ayarlar."
 
 #: src/propedit/propedit_cli_parser.cpp:248
 #, no-c-format
@@ -14875,7 +14875,7 @@ msgstr "Dosya adı yerine giriş dosyasının &dizin adını kullan"
 #: src/mkvtoolnix-gui/merge/input.cpp:562
 #, no-c-format
 msgid "Use this for tracks containing onscreen text or foreign-language dialogue."
-msgstr "Ekrandaki metin veya yabancı dilde diyalog içeren izler için bunu kullanın."
+msgstr "Ekrandaki metin veya yabancı dilde konuşma içeren izler için bunu kullanın."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:43
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:59
