program translations: update Belarusian

--- a/po/be.po
+++ b/po/be.po
@@ -5660,9 +5660,9 @@ msgid "Default additional co&mmand line options:"
 msgstr "Перадвызначаныя дадатковыя параметры каманд&нага радка:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Default command-&line escape mode:"
-msgstr "Перадвызначаныя дадатковыя параметры каманд&нага радка:"
+msgstr "Рэжым &экранавання каманднага радка па змаўчанні:"
 
 #: src/common/kax_element_names.cpp:209
 #: src/common/property_element.cpp:143
@@ -9104,9 +9104,9 @@ msgid "Multiple modes can be used in the same invocation of mkvextract allowing 
 msgstr "Пры выкліку mkvextract могуць выкарыстоўвацца некалькі рэжымаў, што дазваляе вымаць некалькі элементаў за адзін праход."
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:130
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Multiplex &settings:"
-msgstr "&Наступныя налады зліцця"
+msgstr "Налады &зліцця:"
 
 #: src/mkvtoolnix-gui/jobs/mux_job.cpp:184
 #, no-c-format
@@ -11476,7 +11476,7 @@ msgstr "Задае значэнне ўласцівасці (калі яна іс
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:412
 #, no-c-format
 msgid "Sets how to escape arguments by default in the 'Show command line' dialog."
-msgstr ""
+msgstr "Задае перадвызначаны спосаб экранавання аргументаў у акне «Паказаць камандны радок»‎."
 
 #: src/propedit/propedit_cli_parser.cpp:248
 #, no-c-format
@@ -16155,12 +16155,12 @@ msgstr "inflateInit() не ўдалося. Вынік: {0}\n"
 #: src/common/kax_info.cpp:750
 #, no-c-format
 msgid "interleaved; bottom field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "чаргаванне; ніжняе поле паказваецца першым; палі чаргуюцца ў сховішчы, першым захоўваецца верхні радок верхняга поля"
 
 #: src/common/kax_info.cpp:749
 #, no-c-format
 msgid "interleaved; top field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "чаргаванне; верхняе поле паказваецца першым; палі чаргуюцца ў сховішчы, першым захоўваецца верхні радок верхняга поля"
 
 #: src/propedit/change.cpp:393
 #, no-c-format, c++-format
@@ -16809,9 +16809,9 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "чытальнік TTA: tag_size < 0 у канструктары. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
-msgstr "Неідэнтыфікаваны"
+msgstr "нявызначаны"
 
 #: src/common/audio_emphasis.cpp:51
 #: src/common/audio_emphasis.cpp:55
