program translations: update Norwegian Bokmål

--- a/po/nb.po
+++ b/po/nb.po
@@ -5642,9 +5642,9 @@ msgid "Default additional co&mmand line options:"
 msgstr "Standard ekstra ko&mmandolinjealternativer:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Default command-&line escape mode:"
-msgstr "Standard ekstra ko&mmandolinjealternativer:"
+msgstr "Standard kommando-&linje escape-modus:"
 
 #: src/common/kax_element_names.cpp:209
 #: src/common/property_element.cpp:143
@@ -8830,7 +8830,7 @@ msgstr "Matroska-filer"
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:58
 #, no-c-format
 msgid "Matroska files can be played back without the cue data, but seeking will probably be imprecise and slower."
-msgstr "Matroska-filer kan spilles av uten cue-data, men søking vil sannsynligvis være upresist og tregere."
+msgstr "Matroska-filer kan spilles av uten signaldata, men søking vil sannsynligvis være upresist og tregere."
 
 #: src/common/kax_element_names.cpp:78
 #, no-c-format
@@ -9076,9 +9076,9 @@ msgid "Multiple modes can be used in the same invocation of mkvextract allowing 
 msgstr "Flere moduser kan brukes i samme påkallelse av mkvextract, noe som tillater uttrekking av flere ting i en enkel omgang."
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:130
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Multiplex &settings:"
-msgstr "&Neste multipleksinnstillinger"
+msgstr "Multipleks&innstillinger"
 
 #: src/mkvtoolnix-gui/jobs/mux_job.cpp:184
 #, no-c-format
@@ -11334,7 +11334,7 @@ msgstr "Valgt:"
 #: src/mkvtoolnix-gui/merge/input.cpp:649
 #, no-c-format
 msgid "Selects for which blocks mkvmerge will produce index entries ( = cue entries)."
-msgstr "Velger for hvilke blokker mkvmerge vil produsere indeksoppføringer ( = cue-oppføringer)."
+msgstr "Velger for hvilke blokker mkvmerge vil produsere indeksoppføringer ( = signaloppføringer)."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:32
 #, no-c-format
@@ -11421,7 +11421,7 @@ msgstr "Setter en egenskap til verdien hvis den finnes, og legger den ellers til
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:412
 #, no-c-format
 msgid "Sets how to escape arguments by default in the 'Show command line' dialog."
-msgstr ""
+msgstr "Angir hvordan argumenter skal unnslippes som standard i 'Vis kommandolinje'-dialogen."
 
 #: src/propedit/propedit_cli_parser.cpp:248
 #, no-c-format
@@ -12091,7 +12091,7 @@ msgstr "Mål"
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:57
 #, no-c-format
 msgid "Tells mkvmerge not to create and write the cue data which can be compared to an index in an AVI."
-msgstr "Forteller mkvmerge om ikke å opprette og skrive cue-dataene som kan sammenlignes med en indeks i en AVI."
+msgstr "Forteller mkvmerge om ikke å opprette og skrive signaldataene som kan sammenlignes med en indeks i en AVI."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:45
 #, no-c-format
