program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-06-08 16:43+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Casper, 2023\n"
+"Last-Translator: Casper, 2023-2024\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -838,6 +838,8 @@ msgid ""
 "  --regenerate-track-uids  Generate new random track UIDs instead of keeping\n"
 "                           existing ones.\n"
 msgstr ""
+"--regenerate-track-uids  Genera nuevos UID de seguimiento aleatorio en lugar de conservar\n"
+"                        los existentes.\n"
 
 #: src/merge/mkvmerge.cpp:286
 #, no-c-format
@@ -5736,9 +5738,9 @@ msgid "Default additional co&mmand line options:"
 msgstr "Opciones adicionales por defecto en línea de co&mandos:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Default command-&line escape mode:"
-msgstr "Opciones adicionales por defecto en línea de co&mandos:"
+msgstr "Modo de escape de &línea de comandos por defecto:"
 
 #: src/common/kax_element_names.cpp:209
 #: src/common/property_element.cpp:143
@@ -9174,9 +9176,9 @@ msgid "Multiple modes can be used in the same invocation of mkvextract allowing 
 msgstr "Varios modos se pueden usar en la misma invocación de mkvextract permitiendo la extracción de múltiples elementos de una sola vez."
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:130
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Multiplex &settings:"
-msgstr "&Siguientes ajustes de multiplexado"
+msgstr "Ajuste&s múltiplex:"
 
 #: src/mkvtoolnix-gui/jobs/mux_job.cpp:184
 #, no-c-format
@@ -10652,9 +10654,9 @@ msgstr "Lector de Quicktime/MP4: La pista {0} tiene ausente alguna información.
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:202
 #: src/mkvtoolnix-gui/util/settings.cpp:319
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Quit MKVToolNix"
-msgstr "M&KVToolNix GUI"
+msgstr "Salir de MKVToolNix"
 
 #: src/common/file_types.cpp:79
 #, no-c-format
@@ -11529,7 +11531,7 @@ msgstr "Establecer una propiedad en el valor si es que existe; de lo contrario, 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:412
 #, no-c-format
 msgid "Sets how to escape arguments by default in the 'Show command line' dialog."
-msgstr ""
+msgstr "Establece cómo escapar de los argumentos de forma predeterminada en el cuadro de diálogo 'Mostrar línea de comando'."
 
 #: src/propedit/propedit_cli_parser.cpp:248
 #, no-c-format
@@ -16087,9 +16089,9 @@ msgid "extended language subtags form"
 msgstr "forma de sub-etiquetas de idioma extendido"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:204
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "ffmpeg metadata files"
-msgstr "Unir archivos multimedia"
+msgstr "archivos de metadatos ffmpeg"
 
 #: src/merge/output_control.cpp:429
 #, no-c-format, c++-format
@@ -16827,7 +16829,7 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "tta_reader: tamaño_etiqueta < 0 en el c'tor. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
 msgstr "Indeterminado"
 
