program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-06-08 16:43+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Casper, 2023-2024\n"
+"Last-Translator: Spiros Georgaras <sng@hellug.gr>, 2016\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -16181,12 +16181,12 @@ msgstr "inflateInit() ha fallado. Resultado: {0}\n"
 #: src/common/kax_info.cpp:750
 #, no-c-format
 msgid "interleaved; bottom field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "entrelazado; el campo inferior se muestra primero; Los campos se intercalan en el almacenamiento con la línea superior del campo superior almacenada primero."
 
 #: src/common/kax_info.cpp:749
 #, no-c-format
 msgid "interleaved; top field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "entrelazado; el campo superior se muestra primero; Los campos se intercalan en el almacenamiento con la línea superior del campo superior almacenada primero"
 
 #: src/propedit/change.cpp:393
 #, no-c-format, c++-format
