--- a/doc/man/po4a/po/be.po
+++ b/doc/man/po4a/po/be.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-06-13 11:59+0200\n"
+"POT-Creation-Date: 2024-07-13 18:08+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Prydespar <prydespar@gmail.com>, 2024\n"
 "Language-Team: Belarusian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/be/)\n"
@@ -25,8 +25,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "85.0"
-msgstr "85.0"
+msgid "86.0"
+msgstr "86.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -34,7 +34,9 @@ msgstr "85.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-06-02"
+#, fuzzy
+#| msgid "2024-06-02"
+msgid "2024-07-13"
 msgstr "2024-06-02"
 
 #. type: Content of the mkvmerge entity
