--- a/doc/man/po4a/po/nb.po
+++ b/doc/man/po4a/po/nb.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2024-06-13 13:51+0200\n"
+"POT-Creation-Date: 2024-07-13 18:08+0200\n"
 "PO-Revision-Date: 2024-06-19 14:32+0200\n"
 "Last-Translator: Roger Knutsen, 2024\n"
 "Language-Team: Norwegian Bokmål (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/nb/)\n"
@@ -27,8 +27,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "85.0"
-msgstr "85.0"
+msgid "86.0"
+msgstr "86.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -36,7 +36,9 @@ msgstr "85.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-06-02"
+#, fuzzy
+#| msgid "2024-06-02"
+msgid "2024-07-13"
 msgstr "02-06-2024"
 
 #. type: Content of the mkvmerge entity
