--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (86.0-0~bunkus01) noble; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sat, 13 Jul 2024 18:08:20 +0200
+
 mkvtoolnix (85.0-0~bunkus01) noble; urgency=low
 
   * New version.
