program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5684,9 +5684,9 @@ msgid "Default additional co&mmand line options:"
 msgstr "Opções de linha de co&mando adicionais padrão:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Default command-&line escape mode:"
-msgstr "Opções de linha de co&mando adicionais padrão:"
+msgstr "Modo de escape padrão da &linha de comando:"
 
 #: src/common/kax_element_names.cpp:209
 #: src/common/property_element.cpp:143
@@ -9120,9 +9120,9 @@ msgid "Multiple modes can be used in the same invocation of mkvextract allowing 
 msgstr "Vários modos podem ser usados na mesma chamada de mkvextract permitindo a extração de várias coisas em uma única passagem."
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:130
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Multiplex &settings:"
-msgstr "&Próximas configurações de multiplexação"
+msgstr "Configuraçõe&s de multiplexação:"
 
 #: src/mkvtoolnix-gui/jobs/mux_job.cpp:184
 #, no-c-format
@@ -11475,7 +11475,7 @@ msgstr "Define uma propriedade ao valor, se existir; caso não exista, será adi
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:412
 #, no-c-format
 msgid "Sets how to escape arguments by default in the 'Show command line' dialog."
-msgstr ""
+msgstr "Define como escapar argumentos por padrão na caixa de diálogo 'Exibir linha de comando'."
 
 #: src/propedit/propedit_cli_parser.cpp:248
 #, no-c-format
