--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-07-30 20:45+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>, 2019-2024\n"
+"Last-Translator: Andrei Stepanov, 2018-2024\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -6956,9 +6956,9 @@ msgid "General variables"
 msgstr "Общие переменные"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr "  --regenerate-track-uids - Создать новые случайные UID дорожек вместо сохранения существующих.\n"
+msgstr "Создать новые случайные UID дорожек вместо сохранения существующих."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7189,9 +7189,9 @@ msgstr "IVF (AV1, VP8, VP9)"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:959
 #: src/mkvtoolnix-gui/merge/tool.cpp:960
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Identifying files"
-msgstr "Добавление файлов"
+msgstr "Определяются файлы"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:365
 #, no-c-format
@@ -15287,9 +15287,9 @@ msgid "When deriving the track language from the file name, the file name is spl
 msgstr "При извлечении языка дорожки из имени файла оно разбивается на части по символам в данном списке."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:74
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When given, this option applies to all source files."
-msgstr "При добавлении нескольких файлов через \"Добавить исходные файлы\":"
+msgstr "Если эта опция задана, она применяется ко всем исходным файлам."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:371
 #, no-c-format
