program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -7202,11 +7202,9 @@ msgid "General variables"
 msgstr "Variables générales"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr ""
-"  --regenerate-track-uids  Génère de nouvelles UID de pistes aléatoires au lieu de\n"
-"                          conserver celles existantes.\n"
+msgstr "Génère de nouveaux UID de pistes aléatoires au lieu de conserver ceux existants."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7436,9 +7434,9 @@ msgstr "IVF (AV1, VP8, VP9)"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:959
 #: src/mkvtoolnix-gui/merge/tool.cpp:960
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Identifying files"
-msgstr "Ajout de fichiers"
+msgstr "Identification des fichiers"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:365
 #, no-c-format
@@ -15524,9 +15522,9 @@ msgid "When deriving the track language from the file name, the file name is spl
 msgstr "Lorsque le nom de fichier sert établir la langue de la piste, il est scindé en parties selon les caractères de cette liste."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:74
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When given, this option applies to all source files."
-msgstr "En déposant des fichiers multiples via « Ajo&uter des fichiers source » :"
+msgstr "Quand activée, cette option s'applique à tous les fichiers source."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:371
 #, no-c-format
