program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -7218,11 +7218,9 @@ msgid "General variables"
 msgstr "Variabili generali"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr ""
-"  --regenerate-track-uids Genera nuovi UID traccia casuali invece di mantenere\n"
-"quelli esistenti.\n"
+msgstr "Genera nuovi UID traccia casuale invece di mantenere quelli esistenti."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7452,9 +7450,9 @@ msgstr "IVF (AV1,VP8,VP9)"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:959
 #: src/mkvtoolnix-gui/merge/tool.cpp:960
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Identifying files"
-msgstr "Aggiunta file"
+msgstr "Identificazione file"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:365
 #, no-c-format
@@ -15555,9 +15553,9 @@ msgid "When deriving the track language from the file name, the file name is spl
 msgstr "Quando si ricava la lingua della traccia dal nome del file, il nome del file viene suddiviso in parti sui caratteri in questo elenco."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:74
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When given, this option applies to all source files."
-msgstr "Quando aggiungi file m&ultipli tramite \"Aggiungi file sorgente\":"
+msgstr "Quando selezionata, questa opzione si applica a tutti i file sorgente."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:371
 #, no-c-format
