program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -791,7 +791,7 @@ msgstr ""
 msgid ""
 "  --regenerate-track-uids  Generate new random track UIDs instead of keeping\n"
 "                           existing ones.\n"
-msgstr "  --regenerate-track-uids  Varolanları korumak yerine yeni rastgele parça UID'leri oluşturur.\n"
+msgstr "  --regenerate-track-uids  Varolanları korumak yerine yeni rastgele iz UID'leri oluşturur.\n"
 
 #: src/merge/mkvmerge.cpp:286
 #, no-c-format
@@ -2898,7 +2898,7 @@ msgstr "'{0}': Aşağıdaki dosyalar dahi işleniyor: {1}\n"
 #: src/input/r_matroska.cpp:2087
 #, no-c-format, c++-format
 msgid "'{0}': You're copying an Opus track that was written in experimental mode. The resulting track will be written in final mode, but one detail cannot be recovered from a track written in experimental mode: the end trimming. This means that a decoder might output a few samples more than originally intended. You should re-multiplex from the original Opus file if possible.\n"
-msgstr "'{0}': Deneysel kipte yazılmış bir Opus izini kopyalıyorsunuz. Ortaya çıkan parça son kipte yazılacaktır, ancak deneysel kipte yazılan bir izden bir ayrıntı kurtarılamaz: son kırpma. Bu, bir kod çözücünün başlangıçta amaçlanandan birkaç örnek daha fazla çıktı verebileceği anlamına gelir. Mümkünse orijinal Opus dosyasından yeniden çoklamalısınız.\n"
+msgstr "'{0}': Deneysel kipte yazılmış bir Opus izini kopyalıyorsunuz. Ortaya çıkan iz son kipte yazılacaktır, ancak deneysel kipte yazılan bir izden bir ayrıntı kurtarılamaz: son kırpma. Bu, bir kod çözücünün başlangıçta amaçlanandan birkaç örnek daha fazla çıktı verebileceği anlamına gelir. Mümkünse orijinal Opus dosyasından yeniden çoklamalısınız.\n"
 
 #: src/common/output.cpp:208
 #: src/common/output.cpp:221
@@ -7176,9 +7176,9 @@ msgid "General variables"
 msgstr "Genel değişkenler"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr "  --regenerate-track-uids  Varolanları korumak yerine yeni rastgele parça UID'leri oluşturur.\n"
+msgstr "Varolanları korumak yerine yeni rastgele iz UID'leri oluşturur."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7407,9 +7407,9 @@ msgstr "IVF (AV1, VP8, VP9)"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:959
 #: src/mkvtoolnix-gui/merge/tool.cpp:960
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Identifying files"
-msgstr "Dosyaları ekleme"
+msgstr "Dosyalar tanımlanıyor"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:365
 #, no-c-format
@@ -15472,9 +15472,9 @@ msgid "When deriving the track language from the file name, the file name is spl
 msgstr "İz dilini dosya adından türetirken, dosya adı bu listedeki karakterlerde parçalara bölünür."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:74
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When given, this option applies to all source files."
-msgstr "'Kaynak dosyaları ekle' aracılığıyla &birden çok dosya eklenirken:"
+msgstr "Verildiğinde, bu seçenek tüm kaynak dosyalara uygulanır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:371
 #, no-c-format
@@ -15765,7 +15765,7 @@ msgstr "Geçen sürenin miktarına, zaman damgalarına, kare/alan numaralarına 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:380
 #, no-c-format
 msgid "You can still enter track names not present in this list manually in both tools."
-msgstr "Her iki araçda bu listede mevcut olmayan parça adlarını hala el ile girebilirsiniz."
+msgstr "Her iki araçda bu listede mevcut olmayan iz adlarını hala el ile girebilirsiniz."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:385
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:390
