--- a/po/nl.po
+++ b/po/nl.po
@@ -93,8 +93,7 @@ msgid ""
 "                           width and height for this aspect ratio.\n"
 msgstr ""
 "  --aspect-ratio <TID:f|a/b>\n"
-"                           Stelt scherm instellingen in door\n"
-"                           de breedte en hoogte voor de beeldverhouding.\n"
+"                           Berekent de beeldverhouding met breedte en hoogte.\n"
 
 #: src/merge/mkvmerge.cpp:303
 #, no-c-format
@@ -117,8 +116,8 @@ msgid ""
 "  --attach-file <file>     Creates a file attachment inside the\n"
 "                           Matroska file.\n"
 msgstr ""
-"  --attach-file <file>         Creëert een bestandsbijlage binnenin het\n"
-"                                                 Matroska bestand.\n"
+"  --attach-file <file>     Creëert een bestandsbijlage binnenin het\n"
+"                           Matroska bestand.\n"
 
 #: src/merge/mkvmerge.cpp:201
 #, no-c-format
@@ -174,7 +173,7 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:400
 #, no-c-format
 msgid "  --capabilities           Lists optional features mkvmerge was compiled with.\n"
-msgstr "  --capabilities           Optionele lijst waarmee mkvmerge gecompileerd is.\n"
+msgstr "  --capabilities          Optionele lijst waarmee mkvmerge gecompileerd is.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
@@ -223,7 +222,7 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:95
 #, no-c-format
 msgid "  --chapters <file>        Read chapter information from the file.\n"
-msgstr "  --chapters <file>              Leest hoofdstuk informatie uit een bestand.\n"
+msgstr "  --chapters <file>       Leest hoofdstuk informatie uit een bestand.\n"
 
 #: src/merge/mkvmerge.cpp:335
 #, no-c-format
@@ -232,7 +231,7 @@ msgid ""
 "                            How chroma is sited horizontally/vertically.\n"
 msgstr ""
 "  --chroma-siting <TID:hori,vert>\n"
-"                            Hoe kleurintensiteit (chroma) horizontaal/verticaal is geplaats\n"
+"                            Hoe kleurintensiteit (chroma) horizontaal/verticaal is geplaatst.\n"
 
 #: src/merge/mkvmerge.cpp:326
 #, no-c-format
@@ -243,7 +242,7 @@ msgid ""
 "                           and vertically.\n"
 msgstr ""
 "  --chroma-subsample <TID:hori,vert>\n"
-"                           TDe hoeveelheid pixels te verwijderen in Cr en CB\n"
+"                           De hoeveelheid pixels te verwijderen in Cr en Cb\n"
 "                           kanalen voor elk pixel niet verwijderen horizontaal\n"
 "                           en verticaal.\n"
 
