--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-07-30 20:45+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Spiros Georgaras <sng@hellug.gr>, 2016\n"
+"Last-Translator: Casper, 2023-2024\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -7282,11 +7282,9 @@ msgid "General variables"
 msgstr "Variables generales"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr ""
-"--regenerate-track-uids  Genera nuevos UID de seguimiento aleatorio en lugar de conservar\n"
-"                        los existentes.\n"
+msgstr "Genere nuevos UID de pistas aleatorias en lugar de mantener los existentes."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7516,9 +7514,9 @@ msgstr "IVF (AV1, VP8, VP9)"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:959
 #: src/mkvtoolnix-gui/merge/tool.cpp:960
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Identifying files"
-msgstr "Añadir archivos"
+msgstr "Identificación de archivos"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:365
 #, no-c-format
@@ -15601,9 +15599,9 @@ msgid "When deriving the track language from the file name, the file name is spl
 msgstr "Al deducir el idioma de la pista a partir del nombre del archivo, este se divide en partes de los caracteres de esta lista."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:74
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When given, this option applies to all source files."
-msgstr "Al añadir m&últiples archivos mediante \"añadir archivos origen\":"
+msgstr "Cuando se proporciona, esta opción se aplica a todos los archivos de origen."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:371
 #, no-c-format
