program translations: update Norwegian Bokmål

--- a/po/nb.po
+++ b/po/nb.po
@@ -7186,11 +7186,9 @@ msgid "General variables"
 msgstr "Generelle variabler"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr ""
-"  --regenerate-track-uids  Generer nye tilfeldige spor UID-er i stedet for å\n"
-"                           beholde eksisterende.\n"
+msgstr "Generer nye tilfeldige spor-UID-er i stedet for å beholde eksisterende."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7419,9 +7417,9 @@ msgstr "IVF (AV1, VP8, VP9)"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:959
 #: src/mkvtoolnix-gui/merge/tool.cpp:960
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Identifying files"
-msgstr "Legge til filer"
+msgstr "Identifiserer filer"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:365
 #, no-c-format
@@ -15486,9 +15484,9 @@ msgid "When deriving the track language from the file name, the file name is spl
 msgstr "Når sporspråket utledes fra filnavnet, splittes filnavnet i deler på tegnene i denne listen."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:74
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When given, this option applies to all source files."
-msgstr "Når du legger til m&ultiple filer via \"legg til kildefiler\":"
+msgstr "Når det er angitt, gjelder dette alternativet for alle kildefiler."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:371
 #, no-c-format
